2012-02-15  Murray Cumming  <murrayc@murrayc.com>

	Remove now-unnecessary call to init_gtkmm.

	* glom/application.cc: The latest gtkmm code in git master makes this 
	unnecessary.

2012-02-13  Murray Cumming  <murrayc@murrayc.com>

	Application: Do not load documents twice.

	* glom/application.cc: on_open(): Correct the call to the 
	base class method, to avoid a second attempt to open the same
	document.

2012-02-10  Murray Cumming  <murrayc@murrayc.com>

	Remove use of Gtk::Main functions.

	* glom/bakery/busy_cursor.cc:
	* glom/import_csv/dialog_import_csv_progress.cc: Use the C API for 
	events_pending/iteration to avoid a crash.

2012-02-10  Murray Cumming  <murrayc@murrayc.com>

	AppWindow: Rename get_application() to get_appwindow().

2012-02-10  Murray Cumming  <murrayc@murrayc.com>

	Do not use Gtk::Main.

	* glom/application.cc: create(): Call the new init_gtkmm method.
	* glom/main.cc: Remove the use of Gtk::Main because it is no unnecessary.

2012-02-10  Murray Cumming  <murrayc@murrayc.com>

	--debug-date-check: Do not show the window.

	* glom/main_local_options.[h|cc]: Make the handler function a class method,
	and make the variables private. Add a get_debug_date_check_result() method.
	* glom/application.cc: Stop the application, before showing the window, 
	if the --debug-date-check option was given, as before we used GApplication.
	
2012-02-10  Murray Cumming  <murrayc@murrayc.com>>

	Move all command-line handling into the remote Application.

	* glom/main.cc:
	* glom/application.cc:
	* glom/main_local_options.[h|cc]:
	* glom/main_remote_options.[h|cc]: Split the command-line options into 
	two OptionGroups, in their own files, even putting local option handling in
	its separate file. This lets us handle them properly, despite the lack of 
	GApplication support for separate local/remote GOption handling.
	( See https://bugzilla.gnome.org/show_bug.cgi?id=634990#c6 )
	thanks to our use of G_APPLICATION_NON_UNIQUE.